# advent-of-code

./: .gitignore  Cargo.toml  Justfile  README.md  build.rs  rustfmt.toml
benches/: benchmark.rs
events/: README.md
events/y2015/: Cargo.toml  README.md
events/y2015/src/: d01.rs  d02.rs  d03.rs  lib.rs  main.rs
events/y2016/: Cargo.toml  README.md
events/y2016/src/: d01.rs  d02.rs  d03.rs  lib.rs  main.rs
events/y2017/: Cargo.toml  README.md
events/y2017/src/: d01.rs  d02.rs  d03.rs  lib.rs  main.rs
events/y2018/: Cargo.toml  README.md
events/y2018/src/: d01.rs  lib.rs  main.rs
events/y2019/: Cargo.toml  README.md
events/y2019/src/: d01.rs  main.rs
events/y2020/: Cargo.toml  README.md  build.rs
events/y2020/src/: d01.rs  main.rs
events/y2021/: Cargo.toml  README.md
events/y2021/src/: d01.rs  main.rs
events/y2022/: Cargo.toml  README.md
events/y2022/src/: d01.rs  main.rs
events/y2023/: Cargo.toml  README.md
events/y2023/src/: d01.rs  main.rs
events/y2024/: Cargo.toml  README.md
events/y2024/src/: d01.rs  d02.rs  d03.rs  d04.rs  lib.rs  main.rs
scripts/: declare-day-module.sh  scaffold-day.rs  scaffold-year.rs  update-documentation-with-benchmarks.rs  update-events-readme.sh  update-year-readme.sh
src/: lib.rs  main.rs
src/scripts/: benchmark.rs  declarations.rs  markdown.rs  mod.rs
src/util/: grid.rs  integer.rs  md5.rs  mod.rs  parse.rs  point.rs  slice.rs  thread.rs
src/y2015/: README.md  d01.rs  d02.rs  d03.rs  d04.rs  d05.rs
src/y2016/: README.md  d01.rs  d02.rs  d03.rs  d04.rs  d05.rs
src/y2017/: README.md  d01.rs  d02.rs  d03.rs  d04.rs  d05.rs
src/y2018/: README.md  d01.rs  d02.rs  d03.rs  d04.rs  d05.rs
src/y2019/: README.md  d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  intcode.rs  mod.rs
src/y2020/: README.md  d01.rs  d02.rs  d03.rs  d04.rs
src/y2021/: README.md  d01.rs  d02.rs  d03.rs  d04.rs
src/y2022/: README.md  d01.rs  d02.rs  d03.rs  d04.rs
src/y2023/: README.md  d01.rs  d02.rs  d03.rs  d04.rs
src/y2024/: README.md  d01.rs  d02.rs  d03.rs  d04.rs
src/y2025/: README.md  d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs
templates/day/: cargo-generate.toml  d{{day}}.rs
templates/year/: Cargo.toml  README.md  cargo-generate.toml
templates/year/src/: lib.rs  main.rs
