[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
itertools = "0.13.0"
lazy_static = "1.5.0"
prettytable-rs = "^0.10"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

[dev-dependencies]
criterion = "0.5.1"
rstest = "0.23.0"

[[bench]]
name = "benchmark"
harness = false

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
# Groups
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Rules
dbg_macro = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
print_stdout = "deny"

[package.metadata.cargo-machete]
ignored = ["prettytable-rs"]
