[package]
name = "y2023"
version = "0.1.0"
edition.workspace = true

[dependencies]
aoc.workspace = true
eyre.workspace = true
fancy-regex.workspace = true
lazy_static.workspace = true
itertools.workspace = true
aho-corasick.workspace = true

[dev-dependencies]
rstest.workspace = true

[build-dependencies]
aoc-build.workspace = true
eyre.workspace = true

[lints]
workspace = true
