[package]
name = "y2024"
version = "0.1.0"
edition.workspace = true

[dependencies]
aoc.workspace = true
eyre.workspace = true
fancy-regex.workspace = true
itertools.workspace = true
lazy_static.workspace = true

[dev-dependencies]
rstest.workspace = true

[build-dependencies]
aoc-build.workspace = true
eyre.workspace = true

[lints]
workspace = true
